[gd_scene load_steps=31 format=3 uid="uid://btt1gupjxi4p5"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_mv32j"]
[ext_resource type="Theme" uid="uid://c6pbcoo6tedmf" path="res://shaders/default.tres" id="1_tqeqw"]
[ext_resource type="Texture2D" uid="uid://ceitukomu3nmf" path="res://sprites/sprite black.png" id="3_mg12y"]
[ext_resource type="Texture2D" uid="uid://cmokvv6sntfcq" path="res://sprites/batJump-Sheet.png" id="3_x4g18"]
[ext_resource type="Texture2D" uid="uid://rotqhetufn6l" path="res://sprites/batMain-Sheet.png" id="4_8jms5"]
[ext_resource type="Texture2D" uid="uid://bjpt4kqwu11yk" path="res://sprites/tileset.png" id="5_1ulgv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ortu8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5moro"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yp2dg"]
atlas = ExtResource("3_x4g18")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfwhj"]
atlas = ExtResource("3_x4g18")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v42f6"]
atlas = ExtResource("4_8jms5")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlc5b"]
atlas = ExtResource("4_8jms5")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba3gb"]
atlas = ExtResource("4_8jms5")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnkwc"]
atlas = ExtResource("4_8jms5")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xobd3"]
atlas = ExtResource("4_8jms5")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kemts"]
atlas = ExtResource("4_8jms5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxuwn"]
atlas = ExtResource("4_8jms5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul7uw"]
atlas = ExtResource("4_8jms5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbrup"]
atlas = ExtResource("3_x4g18")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu6q2"]
atlas = ExtResource("3_x4g18")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_42dnm"]
atlas = ExtResource("3_x4g18")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6ihd"]
atlas = ExtResource("3_x4g18")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylyoy"]
atlas = ExtResource("3_x4g18")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmy11"]
atlas = ExtResource("4_8jms5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgark"]
atlas = ExtResource("4_8jms5")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb1wo"]
atlas = ExtResource("4_8jms5")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhtrb"]
atlas = ExtResource("4_8jms5")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fmvo8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yp2dg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfwhj")
}],
"loop": true,
"name": &"fall",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v42f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlc5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba3gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnkwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xobd3")
}],
"loop": false,
"name": &"hurt",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kemts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxuwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kemts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxuwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kemts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul7uw")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbrup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu6q2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42dnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6ihd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylyoy")
}],
"loop": false,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmy11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgark")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb1wo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhtrb")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ibtlm"]
texture = ExtResource("5_1ulgv")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_left_corner = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0/terrains_peering_bit/bottom_right_corner = 0
0:2/0/terrains_peering_bit/bottom_left_corner = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0/terrains_peering_bit/bottom_right_corner = 0
1:2/0/terrains_peering_bit/bottom_left_corner = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0/terrains_peering_bit/top_left_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0/terrains_peering_bit/bottom_left_corner = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_right_corner = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0/terrains_peering_bit/top_right_corner = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0/terrains_peering_bit/bottom_right_corner = 0
3:1/0/terrains_peering_bit/top_right_corner = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0/terrains_peering_bit/bottom_right_corner = 0
3:2/0/terrains_peering_bit/top_left_corner = 0
3:2/0/terrains_peering_bit/top_right_corner = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0/terrains_peering_bit/bottom_right_corner = 0
4:0/0/terrains_peering_bit/bottom_left_corner = 0
4:0/0/terrains_peering_bit/top_left_corner = 0
4:0/0/terrains_peering_bit/top_right_corner = 0

[sub_resource type="TileSet" id="TileSet_tt4tp"]
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 1
terrain_set_0/terrain_0/name = "Outside 1"
terrain_set_0/terrain_0/color = Color(0.345098, 0.815686, 0.996078, 1)
sources/2 = SubResource("TileSetAtlasSource_ibtlm")

[node name="MainMenu" type="Control"]
material = SubResource("ShaderMaterial_ortu8")
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource("1_tqeqw")
script = ExtResource("1_mv32j")

[node name="sprites" type="Node2D" parent="."]

[node name="pat" type="AnimatedSprite2D" parent="sprites"]
top_level = true
texture_filter = 1
material = SubResource("ShaderMaterial_5moro")
position = Vector2(976, 440)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_fmvo8")
animation = &"idle"
autoplay = "idle"

[node name="Floor" type="TileMap" parent="sprites"]
top_level = true
texture_filter = 1
material = SubResource("ShaderMaterial_5moro")
position = Vector2(400, 632)
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_tt4tp")
format = 2
layer_0/navigation_enabled = false
layer_0/tile_data = PackedInt32Array(65546, 262146, 0, 10, 262146, 0, 11, 262146, 0, 12, 262146, 0, 13, 262146, 0, 65549, 262146, 0, 65545, 262146, 0, 65531, 65538, 2, -5, 65538, 1, -65541, 65538, 0, 131070, 262146, 0, 65534, 2, 1, 65533, 2, 1, 65532, 2, 1, 65548, 262146, 0, 65547, 262146, 0, 131069, 262146, 0, 131068, 262146, 0, 131067, 262146, 0, 131071, 262146, 0, 65536, 262146, 0, 65535, 2, 1, 0, 2, 1, 1, 2, 1, 2, 2, 1, 3, 2, 1, 4, 2, 1, 5, 2, 1, 6, 2, 2, 7, 262146, 0, 8, 262146, 0, 9, 262146, 0, 65544, 262146, 0, 65543, 262146, 0, 65542, 262146, 0, 65541, 262146, 0, 65540, 262146, 0, 65539, 262146, 0, 65538, 262146, 0, 65537, 262146, 0, -65529, 2, 1, -65528, 2, 2, -65527, 262146, 0, -131063, 2, 1, -131062, 2, 1, -131061, 2, 2, -196597, 2, 0, -196596, 2, 1, -65525, 262146, 0, -65526, 262146, 0, -65524, 262146, 0, -65523, 262146, 0, -131059, 262146, 0, -196595, 2, 1, -131060, 262146, 0, 131066, 262146, 0, 65530, 262146, 0, -6, 262146, 0, -65542, 65538, 2, -131078, 65538, 1, -196614, 65538, 1, -262150, 65538, 1, -327686, 65538, 1, -393222, 65538, 1, -458758, 131074, 2, -524294, 262146, 0, -589830, 262146, 0, -655366, 262146, 0, -524295, 262146, 0, -458759, 262146, 0, -393223, 262146, 0, -327687, 262146, 0, -262151, 262146, 0, -196615, 262146, 0, -131079, 262146, 0, -65543, 262146, 0, -7, 262146, 0, 65529, 262146, 0, 65528, 196610, 1, 131065, 262146, 0, 196601, 131074, 1, -458757, 131074, 0, -524293, 65538, 1, -589829, 65538, 1, -589831, 262146, 0, -655367, 262146, 0, 131064, 196610, 1, -8, 196610, 1, -65544, 196610, 1, -131080, 196610, 1, -196616, 196610, 1, -524296, 196610, 1, -589832, 196610, 1, -655368, 196610, 1, -458760, 196610, 1, -393224, 196610, 1, -327688, 196610, 1, -262152, 196610, 1, 196600, 196610, 0, 196602, 131074, 1, 196603, 131074, 1, 196604, 131074, 1, 196607, 131074, 1, 131072, 131074, 1, 131073, 131074, 1, 131074, 131074, 1, 131075, 131074, 1, 131076, 131074, 1, 131077, 131074, 1, 131078, 131074, 1, 131079, 131074, 1, 131080, 131074, 1, 131081, 131074, 1, 131082, 131074, 1, 131083, 131074, 1, 131084, 131074, 1, 131085, 131074, 1, 196605, 131074, 1, 196606, 131074, 1, -655365, 65538, 1, -589810, 131074, 0, -589811, 131074, 1, -589812, 131074, 1, -589813, 131074, 1, -655349, 262146, 0, -655350, 196610, 2, -655351, 131074, 1, -720887, 262146, 0, -720888, 196610, 2, -589814, 196610, 0, -655346, 65538, 1, -655347, 262146, 0, -655348, 262146, 0, -720884, 262146, 0, -720883, 262146, 0, -720885, 262146, 0, -720886, 262146, 0, -720889, 196610, 0, -655352, 196610, 0, -786425, 2, 0, -786424, 2, 1, -786423, 2, 1, -786422, 2, 1, -786421, 2, 1, -786420, 2, 1, -720882, 65538, 1, -786418, 65538, 0, -786419, 2, 1, -196594, 65538, 0, -131058, 65538, 1, -65522, 65538, 1, 14, 65538, 1, 65550, 65538, 1, 131086, 131074, 0, -720904, 2, 0, -720903, 2, 1, -720902, 2, 1, -720901, 65538, 0, -65530, 2, 0, -131064, 2, 0)

[node name="TextureRect" type="TextureRect" parent="."]
use_parent_material = true
layout_mode = 0
offset_left = -688.0
offset_top = -408.0
offset_right = -648.0
offset_bottom = -368.0
scale = Vector2(33.7045, 21.1025)
texture = ExtResource("3_mg12y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 1
use_parent_material = true
layout_mode = 0
offset_left = -400.0
offset_top = -280.0
offset_right = -307.0
offset_bottom = -152.0
scale = Vector2(4, 4)
theme = ExtResource("1_tqeqw")

[node name="Resume" type="Button" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme = ExtResource("1_tqeqw")
text = "Resume
"

[node name="New Game" type="Button" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme = ExtResource("1_tqeqw")
text = "New Game
"

[node name="Options" type="Button" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme = ExtResource("1_tqeqw")
text = "Options
"

[node name="Quit" type="Button" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme = ExtResource("1_tqeqw")
text = "Quit
"

[connection signal="button_down" from="VBoxContainer/Resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="VBoxContainer/New Game" to="." method="_on_new_game_button_down"]
[connection signal="button_down" from="VBoxContainer/Options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="VBoxContainer/Quit" to="." method="_on_quit_button_down"]
